bugfix/Task№41/no_logout_when_you_go_to_productions,_from_personal_area. Smooth scroll. Jumping to a product from another page.

--- a/src/pages/PersonalArea/ui/PersonalArea/PersonalArea.module.scss
+++ b/src/pages/PersonalArea/ui/PersonalArea/PersonalArea.module.scss
@@ -267,8 +267,14 @@
     }
 }
 
+.button {
+    margin-left: 0;
+}
+
 .buttonExit {
     padding: 15px 25px;
+    text-decoration: none;
+    color: $gray-100;
 
     @media (max-width: 767px) {
         width: 100%;
